complete section 4 and some wording

--- a/1_before_talk/02.passion_and_git.md
+++ b/1_before_talk/02.passion_and_git.md
@@ -23,14 +23,14 @@
 * 自然地持續進步
 * 學習 CRUD, RESTful
 * 有激情、有熱情，會讓你自動自發的 coding ，進而快速成長
-* 找自己有興趣的 idea 去實作或是模仿
+* 找自己有興趣的 idea 去實作或是重刻
 
 <!SLIDE bullets incremental>
 # 要學 Git
 
 * 很多人跳過 git 學習 Rails
 * ##千萬不要
-* 1、版本管理
+* 好處1、版本管理
 * 2、Rails 專案放在 Github 上
 * 3、大部分的 Ruby gems 都放在 Github 上
 
